# CMC-COSMIC

./: .buildinfo  .gitignore  .gitmodules  .hgignore  CMCConfig.h.in  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  Makefile.am  README  README.md  TODO  belgy.c  cmc.c  cmc.h  cmc_bhlosscone.c  cmc_binbin.c  cmc_binsingle.c  cmc_bse_utils.c  cmc_bse_utils.h  cmc_core.c  cmc_core.h  cmc_dynamics.c  cmc_dynamics_helper.c  cmc_evolution_thr.c  cmc_fits.c  cmc_fits_sshot.c  cmc_funcs.c  cmc_init.c  cmc_io.c  cmc_mpi.c  cmc_mpi.h  cmc_nr.c  cmc_orbit.c  cmc_relaxation.c  cmc_relaxation.h  cmc_remove_star.c  cmc_search_grid.c  cmc_sort.c  (+16 more)
.github/workflows/: deploy-github-pages.yml  github_registory.yml  python-package.yml
FAQTroubleshooting/: index.html
_sources/: index.rst.txt
_sources/FAQTroubleshooting/: index.rst.txt
_sources/contact/: index.rst.txt
_sources/inifile/: index.rst.txt
_sources/initialconditions/: index.rst.txt
_sources/output/: index.rst.txt
_sources/parallel/: index.rst.txt
ato-fits/: Makefile
ato-fits/ascii2fits/: snap2fits.c
ato-fits/gensort/: gensort.h
ato-fits/kingfit/: Makefile  kingfit.c
ato-fits/massspec/: Makefile  massspec.c
ato-fits/plumcik/: Makefile  plumcik.c
ato-fits/taus113-v2/: taus113-v2.h
bhcore/: as01_50.cmc  as01_500.cmc  bhlctest.cmc  pl_n1e5.cmc  profilinginfo.txt
bse_wrap/: Makefile  Makefile.am  TODO  bse_wrap.c  bse_wrap.h  c_bse.c  c_sse.c  popsynth-mpi.c  popsynth.c  popsynth.h
bse_wrap/bse/: Makefile  Makefile.am  binary.in  bse.f  comenv.f  const_bse.h  evolv1.f  evolv2.f  evolve.in  hrdiag.f  kick.f  mix.f  mlwind.f  popbin.f  sse.f  taus113-ran3.f  zcnsts.f  zfuncs.f
ci/: Params.ini  input.hdf5  make_initial_conditions.py  run_cmc_tests.sh
common/: common.mk  fitslib.h  taus113-v2.h
contact/: index.html
contrib/: Makefile  beo-genpbs.pl  calc_2ddensity.pl  calc_3ddensity.pl  calc_distfunc.pl  check_snaptime.sh  cluster_truncate.pl  clustercrop.pl  cmc_truncate.rb  core_fit.rb  extract_bins.sh  extract_merger_tree.pl  interp_data.pl  make_coll_tree.py  pluck0.pl  pluckbindata.pl  plucketcesc.sh  pluckoutlog.pl  prunedata.pl  pyth_scr_for_MEGA_YEAR.py  pyth_scr_for_SOLAR_MASS_DYN.py  quick_binary_plot.sh  quick_binary_plot_noe.sh  quick_cluster_plot.sh  quick_energy_plot.sh  quick_rel_plot.sh  recover_truncated.rb  smoother.py  snap2data.pl
contrib/LR_smoothen/: LRproc.c  Makefile  cubgcv.f
contrib/density_plot/: 2d_density.rb  3d_density.rb  D_compute.bundle  Makefile  d_compute.c  make_density_plot.sh  (+1 more)
cuda/: Makefile  cmc_cuda.cu  cmc_cuda.cubin  cmc_cuda.h  cmc_cuda.linkinfo  make_cubin
debug/: as01_500-genfits.sh  as01_500.cmc  bin.input  binaries-genfits.sh  binaries.cmc  collisions-genfits.sh  collisions.cmc  debug-sr.input  debug2_input  debug_input  freitag_runaway1-genfits.sh  freitag_runaway1.cmc  gridtest.c  k_w3_n3e5_salpeter.cmc  king_w6_n3e+05_salpeter.input  king_w9_n1e4.input  kw8_n1e5_s_fb0.1_c0.cmc  longtest-bin.input  null.input  pl_n1e4_fb0.cmc  pl_n1e4_fb0_se.cmc  pl_n1e5_fb0.1.cmc  pltest  plummer_100000.fit  plummer_100000.input  plummer_100000_bin.input  plummer_n1e4.input  plummer_n3e5_fb0.1.input  process.sh  rejuv.sh  se_test-genfits.sh  se_test.cmc  simple_plummer_collapse-genfits.sh  simple_plummer_collapse.cmc  sr.input
doc/: cmc.pseudocode  input_doc.txt  output_doc.txt  starfokker.pseudocode  subtimesteps.agr  subtimesteps.txt
examples/: KingProfile.ini  KingProfileTemp.ini  PlummerSphere.ini  generate_king_profile.py  generate_plummer_sphere.py
fewbody/: BUGS  ChangeLog  INSTALL.osx  Makefile  Makefile.osx  README  binbin.c  binsingle.c  cluster.c  cluster.h  fewbody.c  fewbody.h  fewbody_classify.c  fewbody_coll.c  fewbody_io.c  fewbody_isolate.c  fewbody_ks.c  fewbody_nonks.c  fewbody_scat.c  fewbody_utils.c  triplebin.c  triplebin.h
fewbody-0.24/: INSTALL  Makefile.am  binbin.c  binbin.h  binsingle.c  binsingle.h  cluster.c  fewbody.c  fewbody.h  fewbody_classify.c  fewbody_coll.c  fewbody_hier.c  fewbody_isolate.c  fewbody_ks.c  fewbody_nonks.c  fewbody_utils.c  sigma_binsingle.c  sigma_binsingle.h  triple.c  triple.h  triplebin.c
inifile/: index.html
initialconditions/: index.html
inputfiles/: k_w3_n1.25e6_salpeter-ss.cmc  k_w3_n3e5_salpeter-ss.cmc  pl_n1.25e6_kroupa.cmc  pl_n1.25e6_salpeter.cmc  pl_n1e5.cmc
install/: index.html
intro/: index.html
libs/: Makefile  Makefile.am  fitslib.c  fitslibtester.c  taus113-v2.c
m4/: ax_cc_maxopt.m4  ax_with_prog.m4  cuda.m4  filter-flags.m4  fugu-settings.m4  get_repo_version.m4  int64.m4  nu_mpi_flags.m4  pkgconf-flags.m4
muse/: pl_n1e4_fb0.cmc  pl_n1e5_fb0.cmc  pl_n1e6_fb0.cmc
old/: cluster.c  cmc_dynamics_old.c
oldbuild/: Makefile
output/: index.html
parallel/: index.html
profiling/: example_run.sh  pl_n1e5_fb0.cmc  pl_n1e5_fb1.cmc
running/: index.html
scripts/: release.sh  setver.sh
src/: CMakeLists.txt  index.html
src/bse_wrap/bse/: CMakeLists.txt  Makefile.am
src/cmc/: CMakeLists.txt  cmc.c  cmc_bhlosscone.c  cmc_binbin.c  cmc_binsingle.c  cmc_bse_utils.c  cmc_core.c  cmc_dynamics.c  cmc_dynamics_helper.c  cmc_evolution_thr.c  cmc_fits.c  cmc_funcs.c  cmc_init.c  cmc_io.c  cmc_mpi.c  cmc_nr.c  cmc_orbit.c  cmc_remove_star.c  cmc_search_grid.c  cmc_sort.c  cmc_sscollision.c  cmc_stellar_evolution.c  cmc_utils.c
src/fewbody-0.24/: AUTHORS  CMakeLists.txt  ChangeLog.old  ChangeLog.older  INSTALL.osx  Makefile.am  THANKS  TODO  binbin.c  fewbody.c  fewbody_classify.c  fewbody_coll.c  fewbody_hier.c  fewbody_int.c
src/fewbody-0.24/scripts/: post.sh
src/libs/: CMakeLists.txt  fitslib.c  fitslibtester.c  taus113-v2.c  taus113tester.c
src/utils/: CMakeLists.txt
src/utils/addbinaries/: addbinaries.c
src/utils/ascii2fits/: nbody2fits.c  snap2fits.c
src/utils/mkelson/: mkelson.c
src/utils/mkking/: mkking.c
src/utils/mkplummer/: mkplummer.c
src/utils/setimf/: genimf.c  setimf.c
src/utils/setstellar/: setstellar.c
src/utils/setunits/: setunits.c
startrack/: sinbin.h  singl.c
tools/: cmc_parser.py  cmctoolkit.py
utils/: Makefile
(+90 files in other folders)
