noinst_LTLIBRARIES = libfewbody.la
# Since this is just a convenience library, we set the -static flag to avoid 
# double compilation.
libfewbody_la_CFLAGS =-static
libfewbody_la_SOURCES = fewbody.c fewbody_classify.c fewbody_coll.c fewbody.h fewbody_hier.c fewbody_int.c fewbody_io.c fewbody_isolate.c fewbody_ks.c fewbody_nonks.c fewbody_scat.c fewbody_utils.c

